# IAVOIDBot

./: Bot.cpp  Bot.h  BotLogicIF.h  CMakeLists.txt  ChangeLog.txt  CheckInstall.bat  CleanAll.bat  CreateJob.bat  Globals.h  Install.txt  LevelInfo.cpp  LevelInfo.h  PlayStandaloneMatch.bat  Save rebuild.txt  TeamInfo.team  TurnInfo.cpp  TurnInfo.h  jobfiles.txt  rebuild_vis_sln_x64.bat
MyBotLogic/: MyBotLogic.cpp  MyBotLogic.h
StandaloneMatchResults/gamelog/: AIBootCampResults.html  GameReplay.js
build-solution-x64/: AIBot.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Map.cpp  Map.h  SearchMap.cpp  SearchMap.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aibot.vcxproj  aibot.vcxproj.filters  cmake_install.cmake
build-solution-x64/aibot.dir/Debug/aibot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-solution-x64/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
build-solution-x64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
